feat: enhance configuration and key sending capabilities
- Update .gitignore to include additional file types and logs
- Upgrade dependencies in Cargo.toml for improved functionality
- Add CHANGELOG.md and CONFIG.md for better documentation
- Implement independent key sending mode in key_sender.rs
- Refactor main.rs to support independent key execution
- Improve process finding logic in process_finder.rs

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,38 @@
 # Rust
 /target/
 Cargo.lock
+**/*.rs.bk
+*.pdb
 
 # IDE
 .vscode/
 .idea/
-*.iml
+*.swp
+*.swo
+*~
 
 # OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# Local config files
-*.local.json
-config.json
+# Logs
+*.log
+
+# Runtime
+*.exe
+*.out
+*.app
+
+# Local config files (but keep examples)
+*.json
+
+# Keep example configs
+!example-*.json
+
+# Keep the compiled pks.exe
+!target/release/pks.exe
